# copilot-ai-service

./: .dockerignore  Dockerfile  environment.yml  main.py  pyproject.toml
.github/workflows/: build.yml
app/: main.py
app/agents/: copilot_agent.py
app/api/: agent.py  ingest.py  search.py
app/core/: config.py  model.py
app/services/: chunking_service.py  embedding_service.py  llm_service.py  minio_service.py  pdf_service.py
app/tools/: __init__.py  email_tool.py  rag_tool.py  sql_tool.py
app/vectorstore/: pgvector_store.py
