[project]
name = "enterprise-copilot-ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "llama-index>=0.14.22",
    "minio>=7.2.20",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "torch==2.12.1+cpu",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
